--- a/work/tracking-loads-css.css
+++ b/work/tracking-loads-css.css
@@ -43,12 +43,31 @@
 	text-align:center;
 }
 
+@media (max-width: 1200px) {
 
+	.relative .hero_image {
+		margin-top: 300px;
+	}
+}
+
+@media (max-width: 1085px) {
+
+	.relative .hero_image {
+		margin-top: 248px;
+	}
+}
 
 @media (max-width: 1035px) {
 
 	.relative .hero_image {
-		margin-top: 300px;
+		margin-top: 224px;
+	}
+}
+
+@media (max-width: 950px) {
+
+	.relative .hero_image {
+		margin-top: 180px;
 	}
 }
 
